# desktop-app-distribution-framework

./: .gitignore  LICENSE  README.md
desktop-app/: .gitignore  README.md  basic_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
desktop-app-website/: README.md  package.json
desktop-app-website-v2/: README.md
desktop-app-website-v2/src/: firebase.ts
desktop-app-website-v2/src/app/: authRouter.tsx  page.tsx
desktop-app-website-v2/src/app/account/: page.tsx
desktop-app-website-v2/src/app/signIn/: page.tsx
desktop-app-website-v2/src/app/signUp/: page.tsx
desktop-app-website/src/: index.js
desktop-app-website/src/firebase/: firebase.js
website/: README.md
